log.txt
Script started on Sun 28 Feb 2016 04:15:09 PM PST
user1@ubuntu:~/os/Attempt4$ exit./build
Compiling
--Kernel--
./system/begin.cpp:2:24: fatal error: memory/gdt.h: No such file or directory
 #include "memory/gdt.h"
                        ^
compilation terminated.
--Memory Manager--
./ram/fs.cpp: In function ‘ram_directory* create_root_directory(mem_addr, mem_addr, mem_addr)’:
./ram/fs.cpp:26:46: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
  strncpy((char*)dir->block[0].name, "free", 4);
                                              ^
--Library--
--System Terminal Display--
--Main Loader--
./system/boot.asm:70: error: symbol `start' undefined

Linking
cd ./bin
gcc -m32 -T ../link.ld -o ../isodir/boot/myos.bin -ffreestanding -O2 -nostdlib boot.o gdtasm.o gdt.o term.o begin.o -lgcc
cd ..

grub-mkrescue -o myos.iso isodir
user1@ubuntu:~/os/Attempt4$ ./build[3Pexit
exit

Script done on Sun 28 Feb 2016 04:15:12 PM PST
